# mlx-disitrubted-training

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  train.py  train_distributed.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
configs/: distributed_config.json  model_config.json
configs/examples/: distributed_m2_ultra.json  single_gpu.json
docs/: CONTRIBUTING.md  PERFORMANCE.md  api.md  architecture.md  best_practices.md  performance_tuning.md  preflight_checklist.md  quickstart.md  setup_guide.md
docs/api/: distributed.md  models.md  monitoring.md
examples/: distributed_training.ipynb  inference_example.py  minimal_training.py  train_example.py
scripts/: benchmark.py  check_docs.py  init_cluster.sh  monitor.sh  quickstart.sh  run_benchmarks.py  run_inference.sh  run_tests.sh  setup_env.sh  setup_hosts.sh  start_coordinator.py  start_training.sh  start_worker.py  test_distributed.sh  test_network.py  train_personal_ai.sh  verify_results.py  verify_setup.py  verify_setup.sh
src/data/: validation.py
src/evaluation/: continuous_eval.py  evaluator.py
src/inference/: inference_server.py
src/models/: attention.py  model_utils.py  personal_ai.py  speculative.py  unified_model.py
src/monitoring/: dashboard.py  training_monitor.py
src/training/: batch_optimizer.py  config.py  curriculum.py  data_utils.py  distributed_trainer.py  gradient_accumulator.py  instruction_tuning.py  optimized_trainer.py  performance_utils.py  scheduler.py  trainer_utils.py
src/utils/: checkpoint_utils.py  data_utils.py  device_utils.py  memory_utils.py  model_storage.py  network_utils.py  optimization.py  profile_utils.py  quantization.py  recovery_utils.py
tests/: test_distributed.py  test_performance.py  test_training.py
