[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx_distributed"
version = "0.1.0"
description = "Distributed training with MLX for Apple Silicon"
readme = "README.md"
authors = [
    { name = "Jarrod Barnes", email = "jbarnes850@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: MacOS :: MacOS X",
]
requires-python = ">=3.11,<3.12"

dependencies = [
    "mlx>=0.20.0",
    "numpy>=1.24.0",
    "transformers>=4.36.0",
    "safetensors>=0.4.0",
    "datasets>=2.15.0",
    "torch>=2.1.0",
    "mpi4py>=3.1.0",
    "paramiko>=3.3.0",
    "pyzmq>=25.1.0",
    "asyncssh>=2.14.0",
    "iperf3>=0.1.11",
    "aiofiles>=23.2.0",
    "aiosqlite>=0.19.0",
    "xxhash>=3.4.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "psutil>=5.9.0",
    "plotly>=5.18.0",
    "dash>=2.14.0",
    "dash-core-components>=2.0.0",
    "dash-html-components>=2.0.0",
    "pandas>=2.1.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
    "metal-sdk>=2.5.0",
    "huggingface-hub>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "pylint>=3.0.0",
    "types-PyYAML>=6.0.0",
    "types-tqdm>=4.65.0",
    "types-paramiko>=3.5.0.20240918",
    "types-psutil>=5.9.0",
    "types-aiofiles>=23.2.0",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.25.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "configs*", "scripts*"]
